(lang dune 3.6)

(name basic_ocaml)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Timmy Jose")

(maintainers "Timmy Jose")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name basic_ocaml)
 (synopsis "A MiniBASIC interpreter")
 (description "An interpreter in OCaml for a restricted subset of BASIC")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
